
    - is_pseudoprime(k,base) was incorrect for some single digit k with
      non-standard base.  Github #36.

    - powreal and rootreal now return undef for cases where they would divide
      by zero or have a complex result.

    - polygonal_nth and is_polygonal accept large k.

    - addmod etc. use |n| as the modulus for negative n instead of error.

    [PERFORMANCE]

    - The first 100 Bernoulli numbers are cached, and more will be cached
      by bernvec or faulhaber_sum.

    - Add faster factorialmod code.  5-10x faster for large inputs.

    - factoring with many small factors, e.g. a factorial, is much faster.

    - znorder is slightly faster for general inputs, and much faster for n
      with many factors (e.g. a factorial).  Github #38.

    - znprimroot with large powers is much faster.

    [OTHER]

    - valuation(n,k) now will error if k < 2.  This follows Pari and SAGE.

    - lucasu and lucasv accept bigint P and Q values.

    - divisors takes an optional second argument.

    - divisors(0) returns an empty list, sigma(0) returns 0.

0.52 2020-06-22

    [ADDED]

    - powint(a,b)             integer a^b
    - mulint(a,b)             integer a*b
    - addint(a,b)             integer a+b
    - subint(a,b)             integer a-b
    - divint(a,b)             integer a/b quotient  (floor)
    - modint(a,b)             integer a/b modulo    (floor)
    - divrem(a,b)             integer a/b quo + rem (Euclidian)
    - tdivrem(a,b)            integer a/b quo + rem (truncated)
    - absint(n)               integer absolute value
    - negint(n)               integer negate: returns -n
    - is_gaussian_prime(a,b)  is a+bi a Gaussian prime
    - random_safe_prime(b)    random b-bit safe prob prime
    - next_twin_prime(n)      returns start of twin prime > n

    [FIXES]

    - Remove a mod in the AKS test that was in code since 2012.

    - squfof126 was not portable. GMP 6.2.0 changed to lazy allocation